--- a/public/css/home.css
+++ b/public/css/home.css
@@ -246,3 +246,160 @@
   line-height: 28px;
   color: #ffffff;
 }
+
+.home_page {
+  display: flex;
+  flex-direction: column;
+}
+
+.header_frame {
+  position: relative;
+  margin-top: 47px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: center;
+}
+.header_frame .container {
+  flex-direction: row;
+}
+.container .header_left {
+  position: relative;
+  padding: 15px;
+  width: 875px;
+  height: 508px;
+  background-color: #0053f6;
+  background-image: url("../images/header_bg.svg");
+}
+.header_left .header_content {
+  margin-top: 90px;
+  display: flex;
+  flex-direction: column;
+}
+
+.header_content div {
+  width: 104px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: #f5c34b;
+  border-radius: 6px;
+
+  color: #041e42;
+
+  font-family: "Jost";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+}
+.header_content span {
+  margin-top: 10px;
+  width: 428px;
+
+  font-family: "Jost";
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 87px;
+  color: #ffffff;
+}
+.header_content p {
+  margin-top: 10px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #ffffff;
+}
+.header_content a {
+  margin-top: 20px;
+  width: 140px;
+  min-height: 52px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: #ffffff;
+
+  border-radius: 6px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041e42;
+}
+.header_content img {
+  position: absolute;
+  right: 10px;
+}
+.container.header_right {
+  position: relative;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header_right .header_box {
+  width: 422px;
+  height: 240px;
+
+  display: flex;
+  flex-direction: row;
+  background: #f2f2f2;
+  border-radius: 5px;
+}
+.header_right .box_left {
+  margin-left: 30px;
+  width: 50%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.box_left span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #0053f6;
+}
+.box_left p {
+  margin: 10px o;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 38px;
+  color: #041e42;
+}
+.box_left a {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041e42;
+}
+.box_left .hover_border {
+  margin-top: 3px;
+  width: 32px;
+  height: 2px;
+
+  background: #041e42;
+}
+.header_box .box_right {
+  width: 50%;
+}
+.box_righ img {
+  width: 100%;
+  height: 100%;
+}
