--- a/public/css/home.css
+++ b/public/css/home.css
@@ -248,6 +248,7 @@
 }
 
 .home_page {
+  padding-bottom: 60px;
   display: flex;
   flex-direction: column;
 }
@@ -264,21 +265,22 @@
 .header_frame .container {
   flex-direction: row;
 }
-.container .header_left {
+.header_frame .container .header_left {
   position: relative;
   padding: 15px;
   width: 875px;
   height: 508px;
   background-color: #0053f6;
   background-image: url("../images/header_bg.svg");
+  border-radius: 5px;
 }
-.header_left .header_content {
+.header_frame .header_left .header_content {
   margin-top: 90px;
   display: flex;
   flex-direction: column;
 }
 
-.header_content div {
+.header_frame .header_content div {
   width: 104px;
   height: 30px;
   display: flex;
@@ -296,7 +298,7 @@
   font-weight: 500;
   line-height: 22px;
 }
-.header_content span {
+.header_frame .header_content span {
   margin-top: 10px;
   width: 428px;
 
@@ -307,7 +309,7 @@
   line-height: 87px;
   color: #ffffff;
 }
-.header_content p {
+.header_frame .header_content p {
   margin-top: 10px;
   font-family: "Jost";
   font-style: normal;
@@ -316,7 +318,7 @@
   line-height: 28px;
   color: #ffffff;
 }
-.header_content a {
+.header_frame .header_content a {
   margin-top: 20px;
   width: 140px;
   min-height: 52px;
@@ -335,11 +337,11 @@
   line-height: 22px;
   color: #041e42;
 }
-.header_content img {
+.header_frame .header_content img {
   position: absolute;
   right: 10px;
 }
-.container.header_right {
+.header_frame .container.header_right {
   position: relative;
   margin-left: 20px;
   display: flex;
@@ -347,7 +349,7 @@
   justify-content: space-between;
 }
 
-.header_right .header_box {
+.header_frame .header_right .header_box {
   width: 422px;
   height: 240px;
 
@@ -356,7 +358,7 @@
   background: #f2f2f2;
   border-radius: 5px;
 }
-.header_right .box_left {
+.header_frame .header_right .box_left {
   margin-left: 30px;
   width: 50%;
 
@@ -364,7 +366,7 @@
   flex-direction: column;
   justify-content: center;
 }
-.box_left span {
+.header_frame .box_left span {
   font-family: "Jost";
   font-style: normal;
   font-weight: 400;
@@ -372,7 +374,7 @@
   line-height: 22px;
   color: #0053f6;
 }
-.box_left p {
+.header_frame .box_left p {
   margin: 10px o;
   font-family: "Jost";
   font-style: normal;
@@ -381,7 +383,7 @@
   line-height: 38px;
   color: #041e42;
 }
-.box_left a {
+.header_frame .box_left a {
   font-family: "Jost";
   font-style: normal;
   font-weight: 500;
@@ -389,17 +391,67 @@
   line-height: 22px;
   color: #041e42;
 }
-.box_left .hover_border {
+.header_frame .box_left .hover_border {
   margin-top: 3px;
   width: 32px;
   height: 2px;
 
   background: #041e42;
 }
-.header_box .box_right {
+.header_frame .header_box .box_right {
   width: 50%;
 }
-.box_righ img {
+.header_frame .box_righ img {
   width: 100%;
   height: 100%;
+}
+
+/*SERVICE*/
+.home_page .service_frame {
+  position: relative;
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: center;
+}
+.service_frame .container {
+  flex-direction: row;
+}
+.service_frame .container .service_box {
+  width: 25%;
+  height: 86px;
+
+  display: flex;
+  flex-direction: row;
+
+  border-bottom: 1px solid #eaeaea;
+}
+.service_frame .service_box img {
+  width: 35px;
+  height: 35px;
+}
+.service_frame .service_box .service_content {
+  margin-left: 14px;
+  display: flex;
+  flex-direction: column;
+}
+.service_frame .service_content span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #041e42;
+}
+.service_frame .service_content p {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #626974;
 }
