--- a/public/css/command.css
+++ b/public/css/command.css
@@ -24,6 +24,7 @@ p {
   width: 100%;
   height: 145px;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   background: #443297;
 }
