--- a/public/css/home.css
+++ b/public/css/home.css
@@ -283,6 +283,51 @@
 .category_top a:hover {
   border-bottom: 2px solid #041e42;
 }
+/* PAGINATION*/
+.container .pagination_box {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.container .pagination_box .pagination_main {
+
+  width: auto;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.container .pagination_main .pagination_dot {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+}
+.pagination_main img{
+  cursor: pointer;
+}
+.container .pagination_dot .dot {
+  width: 20px;
+  height: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+}
+.container .pagination_dot .dot.active {
+  border: 2px solid #112137;
+}
+.container .pagination_dot .dot div {
+  width: 4px;
+  height: 4px;
+  background: #112137;
+}
 .header_frame {
   position: relative;
   margin-top: 47px;
