--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,5 +1,4 @@
-html,
-body {
+html.body {
   margin: 0;
   padding: 0;
 }
@@ -9,16 +8,15 @@ a {
 p {
   margin: 0;
 }
+
 .container {
   position: relative;
-  /*padding: 20px 0px 14px;*/
   width: 1320px;
   height: auto;
   display: flex;
-  /*flex-direction: column;*/
 }
 
-/* Navbar*/
+/* NAVBAR */
 .navbar_frame {
   position: relative;
   width: 100%;
@@ -26,21 +24,21 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background: #443297;
+  background-color: #443297;
 }
 
 .navbar_frame .container {
-  padding: 20px 0px 14px;
+  padding: 24px 0px 14px;
   flex-direction: column;
 }
 
 .navbar_frame .navbar_top {
   width: 100%;
   height: 50px;
+
   display: flex;
   flex-direction: row;
 }
-
 .navbar_frame .navbar_top > a img {
   width: 117px;
   margin-right: 76px;
@@ -53,9 +51,10 @@ p {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: #fff;
+  background-color: #fff;
   border-radius: 6px;
 }
+
 .navbar_frame .navbar_top .search_box {
   padding: 10px 17px;
   width: auto;
@@ -65,6 +64,7 @@ p {
   flex-direction: row;
   align-items: center;
 }
+
 .navbar_frame .search_box .category_list {
   width: 166px;
   height: 30px;
@@ -72,7 +72,7 @@ p {
   display: flex;
   flex-direction: row;
   align-items: center;
-  border-right: 1px solid #d6d6dd;
+  border-right: 1px solid #d6d6d6;
 }
 
 .navbar_frame .category_list select {
@@ -81,41 +81,44 @@ p {
   border: none;
   outline: none;
 
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 400;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
   font-size: 15px;
   line-height: 22px;
-  color: #041e42;
 }
-
 .navbar_frame .search_box input {
-  margin-left: 12px;
   width: 387px;
   height: 22px;
+  margin-left: 12px;
+
   border: none;
   outline: none;
-
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 400;
+  color: rgb(98, 105, 116);
+  font-family: Jost;
   font-size: 15px;
   line-height: 22px;
-  color: #626974;
 }
+
 .navbar_frame .nav_search_frame .search_icon_box {
   width: 50px;
-  height: 5opx;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5c348;
   border-radius: 0px 6px 6px 0px;
+  background: rgb(245, 195, 75);
 }
+
 .navbar_frame .search_icon_box img {
   width: 20px;
   height: 20px;
 }
+
+.navbar_frame .navbar_top {
+  width: 100%;
+  height: 50px;
+}
+
 .navbar_frame .navbar_top .nav_top_menu {
   margin-left: 59px;
   width: 416px;
@@ -131,14 +134,18 @@ p {
   align-items: center;
   cursor: pointer;
 }
+
 .navbar_frame .top_menu_box .box_icon_box {
+  position: relative;
   margin-right: 16px;
   width: 54px;
   height: 50px;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgb(255, 255, 255, 0.1);
+
+  border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 6px;
 }
 
@@ -146,47 +153,44 @@ p {
   width: 22px;
   height: 22px;
 }
+
 .navbar_frame .top_menu_box .box_info_box {
   display: flex;
   flex-direction: column;
 }
 
 .navbar_frame .box_info_box span {
-  font-family: "Jost";
+  font-family: Jost;
   font-style: normal;
-  font-weight: 400;
   font-size: 13px;
   line-height: 22px;
-  color: #fff;
+  color: #ffffff;
 }
 .navbar_frame .box_info_box strong {
-  font-family: "Jost";
+  font-family: Jost;
   font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
+  font-size: 13px;
   line-height: 22px;
-  color: #fff;
+  color: #ffffff;
 }
+
 .navbar_frame .box_icon_box .basket_count {
   position: absolute;
+  top: 0;
+  right: 0;
+
   width: 15px;
-  height: 15;
-  top: -2px;
-  right: -3px;
-
+  height: 15px;
   display: flex;
-  align-items: center;
   justify-content: center;
-
+  align-items: center;
+  background: rgb(245, 195, 75);
   border-radius: 50%;
-
-  font-family: "Jost";
-  font-style: normal;
+  color: rgb(11, 30, 64);
+  font-family: Jost;
+  font-size: 10px;
   font-weight: 700;
-  font-size: 8px;
   line-height: 10px;
-  color: #081e40;
-  background-color: #f5c34b;
 }
 
 .navbar_frame .navbar_bott {
@@ -198,6 +202,7 @@ p {
   flex-direction: row;
   border-top: 1px solid #5746a1;
 }
+
 .navbar_frame .navbar_bott .navbar_bott_menu_box {
   margin-top: 10px;
   width: auto;
@@ -206,6 +211,7 @@ p {
   display: flex;
   flex-direction: row;
 }
+
 .navbar_frame .navbar_bott_menu_box .browse_box {
   width: 185px;
   height: 30px;
@@ -220,47 +226,60 @@ p {
   width: 20px;
   height: 18px;
 }
+
 .navbar_frame .browse_box span {
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 500;
+  color: rgb(255, 255, 255);
+  font-family: Jost;
   font-size: 16px;
   line-height: 28px;
-  color: #ffffff;
+  font-style: normal;
 }
+
 .navbar_frame .navbar_bott_menu_box .navbar_route_menu {
   margin-left: 12px;
   width: 690px;
   display: flex;
   flex-direction: row;
 }
+
+.navbar_frame .navbar_bott .navbar_route_menu {
+  margin-left: 12px;
+  display: flex;
+  flex-direction: row;
+}
+
 .navbar_frame .navbar_route_menu .router_menu {
   margin-right: 20px;
   width: auto;
   height: 41px;
+
   display: flex;
+  flex-direction: row;
 }
+
 .navbar_frame .router_menu a {
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 500;
+  color: rgb(255, 255, 255);
+  font-family: Jost;
   font-size: 16px;
   line-height: 28px;
-  color: #ffffff;
+  font-style: normal;
 }
+
 .navbar_frame .router_menu a.active {
-  color: #f5c34b;
+  color: rgb(245, 195, 75);
 }
+
 .navbar_frame .navbar_bott_menu_box .sorting_menu {
   display: flex;
   flex-direction: row;
 }
+
 .navbar_frame .sorting_menu span {
   margin-left: 20px;
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 500;
+  color: rgb(255, 255, 255);
+  font-family: Jost;
   font-size: 16px;
+  font-weight: 500;
   line-height: 28px;
-  color: #ffffff;
+  font-style: normal;
 }
