--- a/public/css/command.css
+++ b/public/css/command.css
@@ -283,3 +283,195 @@ p {
   line-height: 28px;
   font-style: normal;
 }
+/*FOOTER*/
+.footer_frame {
+  position: relative;
+  padding: 90px 0 20px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #f3f5f6;
+}
+.footer_frame .footer_spec_title {
+  display: block;
+  margin-bottom: 30px;
+  font-family: 'Jost';
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 26px;
+  font-style: normal;
+}
+.footer_frame .container {
+  flex-direction: column;
+}
+.footer_frame .container .footer_top {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+.footer_frame .footer_contact_box {
+  display: flex;
+  flex-direction: column;
+}
+.footer_frame .footer_contact_box .footer_contact_main {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+}
+.footer_frame .footer_contact_main img {
+  width: 35px;
+  height: 30px;
+}
+.footer_frame .footer_contact_main div {
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+.footer_frame .footer_contact_main div strong {
+  color: #041e42;
+
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+}
+.footer_frame .footer_contact_main div span {
+  margin-top: 10px;
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  color: #041e42;
+}
+.footer_frame .footer_support_box {
+  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+}
+v.footer_frame .footer_support_box a {
+  color: #041e42;
+  font-family: Jost;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+}
+.footer_frame .footer_media_box {
+  margin-left: 55px;
+  display: flex;
+  flex-direction: column;
+}
+.footer_frame .footer_media_box .footer_media_main {
+  display: flex;
+  flex-direction: column;
+}
+.footer_frame .footer_media_main .media_box {
+  display: flex;
+  flex-direction: row;
+}
+.footer_frame .media_box i {
+  margin-right: 25px;
+}
+.footer_frame .footer_media_main .mobile_app_box {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.footer_frame .mobile_app_box img {
+  width: 24px;
+  height: 16px;
+}
+.footer_frame .mobile_app_box span {
+  margin-left: 20px;
+  color: var(--Color-Text-Dark, #041e42);
+  font-family: "Jost";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
+.footer_frame .footer_media_main .card_box {
+  width: 272px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.footer_frame .container .footer_bottom {
+  margin-top: 90px;
+  width: 100%;
+  height: 60px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  border-top: 1px solid #eaeaea;
+}
+.footer_frame .footer_bottom_main {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+.footer_frame .footer_main .footer_bottom_left {
+  width: 940px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+.footer_frame .footer_bottom_left span {
+  margin-right: 60px;
+
+  color: #041e42;
+  font-family: "Jost";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+}
+.footer_frame .footer_main .footer_bottom_right {
+  width: 400px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.footer_frame .footer_bottom_right .footer_select_box {
+  padding: 10px 20px;
+  width: 180px;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: 1px solid #eaeaea;
+  border-radius: 6px;
+  box-sizing: border-box;
+}
+.footer_frame .footer_select_box span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  color: #626974;
+}
+.footer_frame .footer_select_box select {
+  margin-left: 20px;
+  width: 70px;
+  height: 90px;
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  color: #041e42;
+}
