--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,4 +1,9 @@
-html.body {
+root {
+  --font: "Jost";
+}
+
+html
+.body {
   margin: 0;
   padding: 0;
 }
@@ -160,14 +165,14 @@ p {
 }
 
 .navbar_frame .box_info_box span {
-  font-family: Jost;
+  font-family: var(--font);
   font-style: normal;
   font-size: 13px;
   line-height: 22px;
   color: #ffffff;
 }
 .navbar_frame .box_info_box strong {
-  font-family: Jost;
+  font-family:  var(--font);
   font-style: normal;
   font-size: 13px;
   line-height: 22px;
@@ -229,7 +234,7 @@ p {
 
 .navbar_frame .browse_box span {
   color: rgb(255, 255, 255);
-  font-family: Jost;
+  font-family:  var(--font);
   font-size: 16px;
   line-height: 28px;
   font-style: normal;
@@ -259,7 +264,7 @@ p {
 
 .navbar_frame .router_menu a {
   color: rgb(255, 255, 255);
-  font-family: Jost;
+  font-family:  var(--font);
   font-size: 16px;
   line-height: 28px;
   font-style: normal;
@@ -277,7 +282,7 @@ p {
 .navbar_frame .sorting_menu span {
   margin-left: 20px;
   color: rgb(255, 255, 255);
-  font-family: Jost;
+  font-family:  var(--font);
   font-size: 16px;
   font-weight: 500;
   line-height: 28px;
@@ -297,7 +302,7 @@ p {
 .footer_frame .footer_spec_title {
   display: block;
   margin-bottom: 30px;
-  font-family: 'Jost';
+  font-family:  var(--font);
   font-size: 18px;
   font-weight: 500;
   line-height: 26px;
@@ -334,7 +339,7 @@ p {
 .footer_frame .footer_contact_main div strong {
   color: #041e42;
 
-  font-family: Jost;
+  font-family:  var(--font);
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -342,7 +347,7 @@ p {
 }
 .footer_frame .footer_contact_main div span {
   margin-top: 10px;
-  font-family: Jost;
+  font-family:  var(--font);
   font-size: 15px;
   font-style: normal;
   font-weight: 400;
@@ -354,9 +359,9 @@ p {
   display: flex;
   flex-direction: column;
 }
-v.footer_frame .footer_support_box a {
+.footer_frame .footer_support_box a {
   color: #041e42;
-  font-family: Jost;
+  font-family:  var(--font);
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -391,7 +396,7 @@ v.footer_frame .footer_support_box a {
 .footer_frame .mobile_app_box span {
   margin-left: 20px;
   color: var(--Color-Text-Dark, #041e42);
-  font-family: "Jost";
+  font-family:  var(--font);
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -430,7 +435,7 @@ v.footer_frame .footer_support_box a {
   margin-right: 60px;
 
   color: #041e42;
-  font-family: "Jost";
+  font-family:  var(--font);
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -455,7 +460,7 @@ v.footer_frame .footer_support_box a {
   box-sizing: border-box;
 }
 .footer_frame .footer_select_box span {
-  font-family: "Jost";
+  font-family:  var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
