feat completed product all page

--- a/public/css/product_all.css
+++ b/public/css/product_all.css
@@ -1,3 +1,224 @@
+.shop_page {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.shop_page .category_top_frame {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: 1px solid #eaeaea;
+}
+.shop_page .category_top_frame .container {
+  height: 50px;
+  flex-direction: row;
+}
+.shop_page .category_top_frame .container div {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+.shop_page .category_top_frame .container div:hover {
+  cursor: pointer;
+  border-bottom: 2px solid #041e42;
+}
+
+/* HEADER FRAME */
+.shop_page .header_frame {
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: center;
+}
+.shop_page .header_frame .container {
+  height: 424px;
+  flex-direction: row;
+  background: url("../../public/images/images/icons/shop_header_bg.png");
+}
+.shop_page .container .header_content {
+  margin-left: 75px;
+  width: 366px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.shop_page .header_content span {
+  width: 366px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 40px;
+
+  color: #041e42;
+}
+.shop_page .header_content p {
+  margin: 18px 0px;
+
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #041e42;
+}
+.shop_page .header_content a {
+  width: 145px;
+  height: 52px;
+
+  background: #f5c34b;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  border: 1px solid #f5c34b;
+  border-radius: 6px;
+
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+
+.shop_page .product_pagionation_box {
+  margin-top: 100px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.shop_page .product_pagionation_main {
+  width: 160px;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.shop_page .product_pagionation_main .pagionation_dot {
+  width: 82px;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.shop_page .pagionation_dot .dot {
+  width: 17px;
+  height: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.shop_page .dot.active {
+  border: 2px solid #112137;
+}
+
+.shop_page .dot div {
+  width: 4px;
+  height: 4px;
+
+  background: #112137;
+  border-radius: 50%;
+}
+/* SHOP CATEGORY */
+.shop_page .shop_category_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  font-display: row;
+  justify-content: center;
+}
+.shop_page .shop_category_frame .container {
+  flex-direction: column;
+}
+.shop_page .category_top {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.shop_page .container .category_top div {
+  display: flex;
+  flex-direction: row;
+}
+
+.shop_page .container .category_top span {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 40px;
+
+  color: #041e42;
+}
+.shop_page .container .category_top a {
+  margin-left: 30px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+
+.shop_page .container .category_top a:hover {
+  border-bottom: 2px solid #041e42;
+}
+
+.shop_page .shop_category_frame .container .category_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.shop_page .shop_category_frame .category_wrapper .category_box {
+  width: 142px;
+  height: auto;
+}
+
 /* BRANDS FRAME */
 
 .shop_page .brands_frame {
