--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,15 +1,18 @@
-root {
+
+:root {
   --font: "Jost";
 }
 
-html
-.body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
+
 a {
   text-decoration: none;
 }
+
 p {
   margin: 0;
 }
@@ -20,7 +23,6 @@ p {
   height: auto;
   display: flex;
 }
-
 /* NAVBAR */
 .navbar_frame {
   position: relative;
@@ -31,28 +33,27 @@ p {
   justify-content: center;
   background-color: #443297;
 }
-
 .navbar_frame .container {
-  padding: 24px 0px 14px;
+  padding: 20px 0px 14px;
   flex-direction: column;
 }
-
 .navbar_frame .navbar_top {
   width: 100%;
   height: 50px;
-
   display: flex;
   flex-direction: row;
 }
+
 .navbar_frame .navbar_top > a img {
-  width: 117px;
   margin-right: 76px;
+  width: 117px;
   height: 36px;
 }
 
 .navbar_frame .navbar_top .nav_search_frame {
   width: 650px;
   height: 50px;
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -64,44 +65,43 @@ p {
   padding: 10px 17px;
   width: auto;
   height: auto;
-
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-
 .navbar_frame .search_box .category_list {
   width: 166px;
   height: 30px;
-
   display: flex;
   flex-direction: row;
   align-items: center;
   border-right: 1px solid #d6d6d6;
 }
-
 .navbar_frame .category_list select {
   width: 140px;
   height: 30px;
   border: none;
   outline: none;
-
-  color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
   font-size: 15px;
   line-height: 22px;
+  color: #041e0442;
 }
+
 .navbar_frame .search_box input {
+  margin-left: 12px;
   width: 387px;
   height: 22px;
-  margin-left: 12px;
-
   border: none;
   outline: none;
-  color: rgb(98, 105, 116);
-  font-family: Jost;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
   font-size: 15px;
   line-height: 22px;
+  color: #626974;
 }
 
 .navbar_frame .nav_search_frame .search_icon_box {
@@ -110,24 +110,19 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f5c34b;
   border-radius: 0px 6px 6px 0px;
-  background: rgb(245, 195, 75);
 }
-
 .navbar_frame .search_icon_box img {
   width: 20px;
   height: 20px;
-}
-
-.navbar_frame .navbar_top {
-  width: 100%;
-  height: 50px;
 }
 
 .navbar_frame .navbar_top .nav_top_menu {
   margin-left: 59px;
   width: 416px;
   height: 50px;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -145,7 +140,6 @@ p {
   margin-right: 16px;
   width: 54px;
   height: 50px;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -167,47 +161,50 @@ p {
 .navbar_frame .box_info_box span {
   font-family: var(--font);
   font-style: normal;
-  font-size: 13px;
-  line-height: 22px;
-  color: #ffffff;
-}
-.navbar_frame .box_info_box strong {
-  font-family:  var(--font);
-  font-style: normal;
+  font-weight: 400;
   font-size: 13px;
   line-height: 22px;
   color: #ffffff;
 }
 
+.navbar_frame .box_info_box strong {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 22px;
+  color: #ffffff;
+}
 .navbar_frame .box_icon_box .basket_count {
   position: absolute;
-  top: 0;
-  right: 0;
-
   width: 15px;
   height: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgb(245, 195, 75);
-  border-radius: 50%;
-  color: rgb(11, 30, 64);
-  font-family: Jost;
-  font-size: 10px;
-  font-weight: 700;
-  line-height: 10px;
-}
+  top: -2px;
+  right: -3px;
 
-.navbar_frame .navbar_bott {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f5c34b;
+  border-radius: 50%;
+
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 8px;
+  line-height: 10px;
+  color: #0b1e40;
+}
+.navbar_bott {
   margin-top: 20px;
   width: 100%;
   height: 40px;
 
   display: flex;
   flex-direction: row;
-  border-top: 1px solid #5746a1;
-}
 
+  border-top: 1px solid #5745a1;
+}
 .navbar_frame .navbar_bott .navbar_bott_menu_box {
   margin-top: 10px;
   width: auto;
@@ -221,34 +218,28 @@ p {
   width: 185px;
   height: 30px;
 
-  display: flex;
+
+display: flex;
   flex-direction: row;
   align-items: center;
-  border-right: 1px solid #5746a1;
+  border-right: 1px solid #5745a1;
 }
 .navbar_frame .browse_box img {
   margin-right: 10px;
   width: 20px;
   height: 18px;
 }
-
 .navbar_frame .browse_box span {
-  color: rgb(255, 255, 255);
-  font-family:  var(--font);
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
   font-size: 16px;
   line-height: 28px;
-  font-style: normal;
+  color: #ffffff;
 }
-
 .navbar_frame .navbar_bott_menu_box .navbar_route_menu {
   margin-left: 12px;
   width: 690px;
-  display: flex;
-  flex-direction: row;
-}
-
-.navbar_frame .navbar_bott .navbar_route_menu {
-  margin-left: 12px;
   display: flex;
   flex-direction: row;
 }
@@ -257,21 +248,19 @@ p {
   margin-right: 20px;
   width: auto;
   height: 41px;
-
   display: flex;
-  flex-direction: row;
 }
-
 .navbar_frame .router_menu a {
-  color: rgb(255, 255, 255);
-  font-family:  var(--font);
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
   font-size: 16px;
   line-height: 28px;
-  font-style: normal;
+  color: #ffffff;
 }
 
 .navbar_frame .router_menu a.active {
-  color: rgb(245, 195, 75);
+  color: #f5c34b;
 }
 
 .navbar_frame .navbar_bott_menu_box .sorting_menu {
@@ -281,17 +270,18 @@ p {
 
 .navbar_frame .sorting_menu span {
   margin-left: 20px;
-  color: rgb(255, 255, 255);
-  font-family:  var(--font);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 28px;
+  font-family: var(--font);
   font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  color: #ffffff;
 }
-/*FOOTER*/
+
+/* FOOTER */
 .footer_frame {
-  position: relative;
   padding: 90px 0 20px;
+  position: relative;
   width: 100%;
   height: auto;
   display: flex;
@@ -302,15 +292,18 @@ p {
 .footer_frame .footer_spec_title {
   display: block;
   margin-bottom: 30px;
-  font-family:  var(--font);
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 26px;
+  font-family: var(--font);
   font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  color: #041e42;
 }
+
 .footer_frame .container {
   flex-direction: column;
 }
+
 .footer_frame .container .footer_top {
   width: 100%;
   height: auto;
@@ -318,10 +311,11 @@ p {
   display: flex;
   flex-direction: row;
 }
-.footer_frame .footer_contact_box {
+.footer_frame .top .footer_contact_box {
   display: flex;
   flex-direction: column;
 }
+
 .footer_frame .footer_contact_box .footer_contact_main {
   margin-bottom: 30px;
   display: flex;
@@ -336,22 +330,25 @@ p {
   display: flex;
   flex-direction: column;
 }
-.footer_frame .footer_contact_main div strong {
-  color: #041e42;
 
-  font-family:  var(--font);
-  font-size: 15px;
+.footer_frame .footer_contact_main div strong {
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
+  font-size: 15px;
   line-height: 22px;
+
+  color: #041e42;
 }
+
 .footer_frame .footer_contact_main div span {
   margin-top: 10px;
-  font-family:  var(--font);
-  font-size: 15px;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
+  font-size: 15px;
   line-height: 22px;
+
   color: #041e42;
 }
 .footer_frame .footer_support_box {
@@ -360,12 +357,13 @@ p {
   flex-direction: column;
 }
 .footer_frame .footer_support_box a {
-  color: #041e42;
-  font-family:  var(--font);
-  font-size: 14px;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
+  font-size: 14px;
   line-height: 40px;
+
+  color: #041e42;
 }
 .footer_frame .footer_media_box {
   margin-left: 55px;
@@ -380,9 +378,11 @@ p {
   display: flex;
   flex-direction: row;
 }
+
 .footer_frame .media_box i {
   margin-right: 25px;
 }
+
 .footer_frame .footer_media_main .mobile_app_box {
   margin-bottom: 20px;
   display: flex;
@@ -395,11 +395,12 @@ p {
 }
 .footer_frame .mobile_app_box span {
   margin-left: 20px;
-  color: var(--Color-Text-Dark, #041e42);
-  font-family:  var(--font);
-  font-size: 14px;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
+  font-size: 14px;
+
+  color: #041e42;
 }
 .footer_frame .footer_media_main .card_box {
   width: 272px;
@@ -417,33 +418,37 @@ p {
   align-items: flex-end;
   border-top: 1px solid #eaeaea;
 }
-.footer_frame .footer_bottom_main {
+
+.footer_frame .footer_bottom .footer_main {
   width: 100%;
   height: auto;
 
   display: flex;
   flex-direction: row;
 }
+
 .footer_frame .footer_main .footer_bottom_left {
   width: 940px;
   height: auto;
 
-  display: flex;
+
+display: flex;
   flex-direction: row;
 }
 .footer_frame .footer_bottom_left span {
   margin-right: 60px;
-
-  color: #041e42;
-  font-family:  var(--font);
-  font-size: 14px;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
+  font-size: 14px;
   line-height: 40px;
+
+  color: #041e42;
 }
 .footer_frame .footer_main .footer_bottom_right {
   width: 400px;
   height: auto;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -452,24 +457,31 @@ p {
   padding: 10px 20px;
   width: 180px;
   height: 40px;
+
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  background: #ffffff;
+
+  box-sizing: border-box;
+
   border: 1px solid #eaeaea;
   border-radius: 6px;
-  box-sizing: border-box;
 }
 .footer_frame .footer_select_box span {
-  font-family:  var(--font);
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  color: #626974;
+
+  color: #041e42;
 }
 .footer_frame .footer_select_box select {
   margin-left: 20px;
   width: 70px;
-  height: 90px;
+  height: 90%;
+
   background: none;
   border: none;
   outline: none;
@@ -478,30 +490,33 @@ p {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
+
   color: #041e42;
 }
-/*PAGE ROUTER*/
-.page_router{
-  margin:20px 0px;
+/* PAGE ROUTER */
+.page_router {
+  margin: 20px 0px;
   width: 1320px;
 }
-.page_router span{
+.page_router span {
   font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
-  color:#041e42;
+
+  color: #041e42;
 }
 
-.page_router span.drop{
-margin:0px 10px;
+.page_router span.drop {
+  margin: 0px 10px;
 }
-.page_router span.active{
+.page_router span.active {
   font-family: var(--font);
-  font-style:normal;
+  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
-  color:#626974;
+
+  color: #626974;
 }
